; ModuleID = '/home/carl/AnghaBench/vlc/modules/hw/vaapi/extr_vlc_vaapi.c_pool_pic_destroy_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/hw/vaapi/extr_vlc_vaapi.c_pool_pic_destroy_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.pic_sys_vaapi_instance* }
%struct.pic_sys_vaapi_instance = type { i32, i32, i32, i32, i32, %struct.pic_sys_vaapi_instance* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @pool_pic_destroy_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pool_pic_destroy_cb(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.pic_sys_vaapi_instance*, align 8
  %4 = alloca %struct.pic_sys_vaapi_instance*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %5, i32 0, i32 0
  %7 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %6, align 8
  store %struct.pic_sys_vaapi_instance* %7, %struct.pic_sys_vaapi_instance** %3, align 8
  %8 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %3, align 8
  %9 = getelementptr inbounds %struct.pic_sys_vaapi_instance, %struct.pic_sys_vaapi_instance* %8, i32 0, i32 5
  %10 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %9, align 8
  store %struct.pic_sys_vaapi_instance* %10, %struct.pic_sys_vaapi_instance** %4, align 8
  %11 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %4, align 8
  %12 = getelementptr inbounds %struct.pic_sys_vaapi_instance, %struct.pic_sys_vaapi_instance* %11, i32 0, i32 4
  %13 = call i32 @atomic_fetch_sub(i32* %12, i32 1)
  %14 = icmp eq i32 %13, 1
  br i1 %14, label %15, label %32

15:                                               ; preds = %1
  %16 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %4, align 8
  %17 = getelementptr inbounds %struct.pic_sys_vaapi_instance, %struct.pic_sys_vaapi_instance* %16, i32 0, i32 3
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %4, align 8
  %20 = getelementptr inbounds %struct.pic_sys_vaapi_instance, %struct.pic_sys_vaapi_instance* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 8
  %22 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %4, align 8
  %23 = getelementptr inbounds %struct.pic_sys_vaapi_instance, %struct.pic_sys_vaapi_instance* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @vaDestroySurfaces(i32 %18, i32 %21, i32 %24)
  %26 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %4, align 8
  %27 = getelementptr inbounds %struct.pic_sys_vaapi_instance, %struct.pic_sys_vaapi_instance* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @vlc_decoder_device_Release(i32 %28)
  %30 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %4, align 8
  %31 = call i32 @free(%struct.pic_sys_vaapi_instance* %30)
  br label %32

32:                                               ; preds = %15, %1
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 0
  %35 = load %struct.pic_sys_vaapi_instance*, %struct.pic_sys_vaapi_instance** %34, align 8
  %36 = call i32 @free(%struct.pic_sys_vaapi_instance* %35)
  ret void
}

declare dso_local i32 @atomic_fetch_sub(i32*, i32) #1

declare dso_local i32 @vaDestroySurfaces(i32, i32, i32) #1

declare dso_local i32 @vlc_decoder_device_Release(i32) #1

declare dso_local i32 @free(%struct.pic_sys_vaapi_instance*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
